<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundopag"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="44dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/voltarpag" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="44dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.956"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menupag" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/formpag"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/escolha"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="355dp"
        android:layout_height="63dp"
        android:background="@drawable/buttonpag"
        android:backgroundTint="#2A282F"
        android:drawableStart="@drawable/cartao2"
        android:drawableEnd="@drawable/backpink"
        android:drawablePadding="10dp"
        android:elevation="40dp"
        android:fontFamily="@font/poppins_light"
        android:gravity="start|center_vertical"
        android:hapticFeedbackEnabled="false"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/cartao2"
        android:textColor="@color/white"
        android:textSize="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.315" />

    <Button
        android:id="@+id/button2"
        android:layout_width="355dp"
        android:layout_height="63dp"
        android:background="@drawable/buttonpag"
        android:backgroundTint="#2A282F"
        android:drawableStart="@drawable/cartao3"
        android:drawableEnd="@drawable/backpink"
        android:drawablePadding="10dp"
        android:elevation="40dp"
        android:fontFamily="@font/poppins_light"
        android:gravity="start|center_vertical"
        android:hapticFeedbackEnabled="false"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/cartao3"
        android:textColor="@color/white"
        android:textSize="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.426" />

    <Button
        android:id="@+id/button3"
        android:layout_width="355dp"
        android:layout_height="63dp"
        android:background="@drawable/buttonpag"
        android:backgroundTint="#2A282F"
        android:drawableStart="@drawable/cartao"
        android:drawableEnd="@drawable/backpink"
        android:drawablePadding="10dp"
        android:elevation="40dp"
        android:fontFamily="@font/poppins_light"
        android:gravity="start|center_vertical"
        android:hapticFeedbackEnabled="false"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/cartao"
        android:textColor="@color/white"
        android:textSize="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.206" />

    <ImageView
        android:id="@+id/menuf"
        android:layout_width="557dp"
        android:layout_height="80dp"
        android:layout_marginTop="592dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/menuf"
        tools:layout_editor_absoluteX="-73dp" />
</androidx.constraintlayout.widget.ConstraintLayout>